@@ -7,6 +7,7 @@ Version: 1.1.21
     - MARV now creates pollution while running
   Features:
     - Added "Easy Mode" setting that simplifies recipes and adds early game transmutation recipes
+    - Added /tibPauseGrowth command to toggle Tiberium growth
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.20
   Features:
